2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_shortcode_handler) Also checks existance of GD
	  extension before result output.
	- (scorerender_return_fragment_ok) New func.
	- (scorerender_return_fragment_error) New func.
	- (scorerender_process_content) Removed, now split into the 2
	  new funcs above.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (get_raw_input): New func, for getting unprocessed music code.
	- (render): Also remove intermediate file, sometimes those files
	  exists even when initial rendering step failed.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- Don't allocate unused variable to preg_match.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* notation/guido.php:
	- Use more precise sizing and zoom ratio so that image will
	  not look blurred.

2010-02-25  Abel Cheung  <abelcheung@gmail.com>

	* Initial shortcode support.
	* Fix comment rendering limitation bug.
	* wp-scorerender.php:
	- (scorerender_shortcode_unsupported) New func.
	- (scorerender_shortcode_handler) New func.
	- (scorerender_parse_shortcode) New func.
	- (scorerender_conversion_hook) Removed, routine merged into
	  scorerender_parse_shortcode().
	- (scorerender_init_class) Removed, routine merged into
	  scorerender_shortcode_handler().

2010-02-25  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-shortcode.php:
	- New file, taken from WP 2.9.2 as a replacement of shortcode API
	  because 2.6-2.7 one is not good enough to use.

2010-02-25  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php:
	- Rename ScoreRender class to SrNotationBase. 

2010-02-24  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, notation/*.php:
	- Rename ScoreRender_Notation interface to SrNotationInterface.
	
2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_conversion_hook) notation was not deactivated even when